@@ -38,6 +38,10 @@
 <p>2018-04-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/dpx.c (ReadDPXImage): Insist on having an element
+descriptor we understand since otherwise we can not decode the
+image.  Fixes oss-fuzz 7410 &quot;graphicsmagick/coder_DPX_fuzzer:
+Use-of-uninitialized-value in WriteDPXImage&quot;. (Credit to OSS-Fuzz)</li>
 <li>coders/avs.c, etc... (WriteAVSImage): Cache image list length
 before writing image sequence so that progress monitor is
 scalable.  Helps with oss-fuzz 7404
