@@ -1,5 +1,10 @@
 2018-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/dpx.c (ReadDPXImage): Insist on having an element
+	descriptor we understand since otherwise we can not decode the
+	image.  Fixes oss-fuzz 7410 "graphicsmagick/coder_DPX_fuzzer:
+	Use-of-uninitialized-value in WriteDPXImage". (Credit to OSS-Fuzz)
+
 	* coders/avs.c, etc... (WriteAVSImage): Cache image list length
 	before writing image sequence so that progress monitor is
 	scalable.  Helps with oss-fuzz 7404
